wip: added 'attribute' for 'definePermissions'